
[project]
name = "openenv-support-triage"
version = "0.1.0"
description = "OpenEnv Support Triage Environment"
authors = [{name = "Palak"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "agent*", "graders*", "tasks*"]