
[project]
name = "openenv-support-triage"
version = "0.1.0"
description = "OpenEnv Support Triage Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv==0.1.13",
]

[project.scripts]
server = "server.app:main"
start = "server.app:main"
